# Free-for-use

./: LICENSE  README.md  Virus_Spread_simulator.py  aim_trainer_game.py  evolution_simulator.py  pyproject.toml  requirements.txt
examples/: guard_dialogue.json  tavern_dialogue.json  terminal_demo.py
pydialogue/: __init__.py  conditions.py  effects.py  engine.py  models.py  validator.py
tests/: test_conditions.py  test_engine.py  test_validator.py
