[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydialogue"
version = "0.1.0"
description = "Reusable JSON-driven dialogue engine for Python games"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "PyDialogue Contributors" }]
keywords = ["dialogue", "games", "rpg", "visual-novel", "pygame"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Topic :: Games/Entertainment",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
packages = ["pydialogue"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
